--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
             0% { text-shadow: 0 0 9px rgba(207, 64, 255, 0.6); }
             100% { text-shadow: 0 0 16px rgba(207, 64, 255, 0.8), 0 0 24px rgba(207, 64, 255, 0.6); }
         }
-
         .back-button-tab {
             position: fixed;
             top: 25px;
@@ -139,14 +138,12 @@
             color: var(--light);
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
-
         /* Main container */
         .main-container {
             width: 100%;
             max-width: 1400px;
             margin: 100px auto 0; /* Default margin for larger screens */
         }
-
         /* Header with Sun Integration */
         header {
             text-align: center;
@@ -456,7 +453,6 @@
             max-width: 700px;
             width: 100%;
         }
-
         /* Ladder Animation Styles */
         .ladder-container {
             transform-style: preserve-3d;
@@ -501,7 +497,6 @@
                 transform: translateY(15vh);
             }
         }
-
         /* Sunrise Animation Styles (Updated with more stars, sun rise/set, and stars emerging from sun) */
         .sunrise-scene {
             position: relative;
@@ -537,7 +532,6 @@
             filter: drop-shadow(0 0 20px rgba(255, 215, 0, 0.8));
             z-index: 2; /* Sun above stars */
         }
-
         /* Stars container */
         .stars-container {
             position: absolute;
@@ -549,7 +543,6 @@
             animation: sun-rise-set-card 20s infinite ease-in-out;
             z-index: 0; /* Stars below the sun and horizon */
         }
-
         /* Individual stars - using box-shadow for multiple stars */
         .star {
             position: absolute;
@@ -678,7 +671,6 @@
             /* Optional subtle twinkle effect */
             /* animation: twinkle 3s infinite alternate; */ /* Uncomment to enable twinkling */
         }
-
         /* Updated animation for sun and stars in the card */
         @keyframes sun-rise-set-card {
             0% {
@@ -717,7 +709,6 @@
                 opacity: 0.7;
             }
         }
-
         .sunrise-caption {
             position: absolute;
             top: 5px; /* Position at the top */
@@ -730,8 +721,6 @@
             background-color: #000; /* Black background */
             z-index: 3; /* Ensure caption is above everything */
         }
-
-
         /* Responsive Design Improvements */
         @media (max-width: 1200px) {
             .top-nav {
@@ -860,7 +849,6 @@
     <a href="#" class="back-button-tab" id="backButton">
         <i class="fas fa-arrow-left" aria-hidden="true"></i> Back
     </a>
-
     <div class="main-container">
         <div class="container">
             <header>
@@ -876,7 +864,6 @@
                     </div>
                 </div>
             </header>
-
             <div class="content-section">
                 <h2 class="section-title">Bernstein's Core Concepts</h2>
                 <div class="articles-container">
@@ -898,9 +885,7 @@
                                 </div>
                             </div>
                             <!-- End of Ladder Animation -->
-
                             <p>Bernstein's concept of vertical knowledge structures describes knowledge organised hierarchically, where concepts build systematically upon previous ones. This creates a cumulative, integrated framework typical in disciplines like physics or mathematics, where foundational principles underpin more complex theories.</p>
-
                             <p>Applying this to academic literacies, vertical structures correspond to disciplines where writing practices are highly codified and cumulative. Students must master specific genres and conventions that build upon each other. The academic literacies model helps reveal how explicit rules shape the literacy practices students must learn.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> In vertical structures, knowledge is cumulative, building upon itself in a coherent, integrated way.
@@ -916,7 +901,6 @@
                             Characterised by systematic progression and integration of concepts.
                         </footer>
                     </div>
-
                     <!-- Card 2: Horizontal Knowledge (Top Right) - Includes Updated Sunrise Animation -->
                     <div class="card">
                         <div class="card__header">
@@ -935,9 +919,7 @@
                                 <div class="sunrise-caption">Sunrise representing diverse, segmented knowledge structure.</div>
                             </div>
                             <!-- End of Updated Sunrise Animation -->
-
                             <p>Bernstein's horizontal knowledge structures are segmented, consisting of distinct, often unrelated approaches or languages within a field. These lack a single integrating framework, leading to weaker classification and framing. This is typical in fields like the humanities.</p>
-
                             <p>The academic literacies model is particularly valuable for understanding horizontal structures. It highlights how students must navigate diverse, often competing genres and discourses within these fields. The model emphasises the situated nature of literacy practices, where meaning, identity, and power are negotiated differently in each segment.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> In horizontal structures, knowledge areas exist side-by-side, often incommensurable with each other.
@@ -955,11 +937,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="content-section">
                 <h2 class="section-title">Application & Practice</h2>
                 <div class="articles-container">
-                   <!-- Card 3: Genre and Mode Switching (MODIFIED) -->
+                    <!-- Card 3: Genre and Mode Switching -->
                     <div class="card">
                         <div class="card__header">
                             <h2 class="card__title">
@@ -986,11 +967,6 @@
                             Recognising the complex shifts students make between academic communication forms.
                         </footer>
                     </div>
-                        <footer class="card__footer">
-                            Recognising the complex shifts students make between academic communication forms.
-                        </footer>
-                    </div>
-
                     <!-- Card 4: Pedagogy & Design Frame -->
                     <div class="card">
                         <div class="card__header">
@@ -1003,7 +979,6 @@
                                  alt="Illustration of different academic genres" 
                                  class="card__image">
                             <p>Bernstein's concepts are crucial for curriculum design and pedagogy. Recognising whether a subject area is predominantly vertical or horizontal helps educators anticipate the literacy challenges students will face.</p>
-
                             <p>Lea and Street's academic literacies model operationalises this by advocating for a 'design frame' that makes the social and epistemological nature of academic tasks explicit. This moves beyond deficit models to a more nuanced understanding of student learning.</p>
                             <blockquote class="card__quote">
                                 <i class="fas fa-quote-left" aria-hidden="true"></i> Treating such students as collaborators in the development of the academic literacies necessary... can perhaps offer a different and more supportive route.
@@ -1021,7 +996,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Centered final card - Now "Multimodal Communication" -->
             <div class="centered-card">
                 <div class="card">
@@ -1031,7 +1005,7 @@
                         </h2>
                     </div>
                     <div class="card__body">
-                        <img src="https://github.com/oeybers-cpu/knowledge_structures/blob/main/multimodal.png?raw=true"
+                        <img src="https://github.com/oeybers-cpu/multimodal_grammar/blob/main/digital_communication_africa.png?raw=true"
                              alt="Multimodal communication showing integration of different semiotic resources"
                              class="card__image">
                         <p>In academic settings, meaning is rarely constructed through language alone. The academic literacies model recognises that students engage with and produce texts that combine linguistic, visual, gestural, and spatial elements.</p>
@@ -1051,7 +1025,6 @@
                     </footer>
                 </div>
             </div>
-
             <div class="copyright">
                 <p>&copy; 2025 Dr Oscar Eybers</p>
                 <a href="#" id="topLink" style="display: inline-block; margin-top: 10px; color: var(--digital-purple); text-decoration: none;">
@@ -1060,7 +1033,6 @@
             </div>
         </div>
     </div>
-
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const backButton = document.getElementById('backButton');
@@ -1079,7 +1051,6 @@
                     }
                 });
             }
-
             const topLink = document.getElementById('topLink');
             if (topLink) {
                 topLink.addEventListener('click', function(e) {
@@ -1090,7 +1061,6 @@
                     });
                 });
             }
-
             window.addEventListener('beforeunload', function() {
                 const currentState = {
                     url: window.location.href,
@@ -1098,7 +1068,6 @@
                 };
                 history.replaceState(currentState, document.title);
             });
-
             window.addEventListener('pageshow', function(event) {
                 if (event.persisted) {
                     const state = history.state;
@@ -1107,14 +1076,12 @@
                     }
                 }
             });
-
             if (performance.navigation.type === PerformanceNavigation.TYPE_BACK_FORWARD) {
                 const state = history.state;
                 if (state && state.scrollY !== undefined) {
                     window.scrollTo(0, state.scrollY);
                 }
             }
-
             window.addEventListener('orientationchange', function() {
                 setTimeout(function() {
                     window.location.reload();
