--- a/index.html
+++ b/index.html
@@ -1051,13 +1051,13 @@
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const backButton = document.getElementById('backButton');
-            if (backButton) {
-                backButton.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    const currentState = {
-                        url: window.location.href,
-                        scrollY: window.scrollY
+           const backButton = document.getElementById('backButton');
+if (backButton) {
+    backButton.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.history.back();
+    });
+}
                     };
                     history.replaceState(currentState, document.title);
                     if (history.length > 1) {
